--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-p2p = { path = "libs/p2p" }
+tokio = { version = "0.2", features = ["full"] }
+protobuf = "2.10"
+tokio-util = { version = "0.3", features = ["full"] }
+log = "0.4"
+env_logger = "0.7"
+futures = "0.3"
+bytes = "0.5"
 
-[workspace]
-members = ["libs/p2p"]
+[build-dependencies]
+protobuf-codegen-pure = "2.10"
