tested, will refactor to spawn

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,11 @@ edition = "2018"
 tokio = { version = "0.2", features = ["full"] }
 protobuf = "2.10"
 tokio-util = { version = "0.3", features = ["full"] }
-tokio-timer = "0.2"
 log = "0.4"
 env_logger = "0.7"
 futures = "0.3"
 bytes = "0.5"
+simple-error = "0.2"
 
 [build-dependencies]
 protobuf-codegen-pure = "2.10"
