--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2018"
 [dependencies]
 hbb_common = { path = "libs/hbb_common" }
 sled = "0.31"
+serde_derive = "1.0"
+serde = "1.0"
+serde_json = "1.0"
 
 [workspace]
 members = ["libs/hbb_common"]
