--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ serde = "1.0"
 serde_json = "1.0"
 lazy_static = "1.4"
 clap = "2.33"
+rust-ini = "0.15"
 
 [workspace]
 members = ["libs/hbb_common"]
