--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,6 @@ path = "src/hbbr/main.rs"
 
 [dependencies]
 hbb_common = { path = "libs/hbb_common" }
-sled = "0.34"
 serde_derive = "1.0"
 serde = "1.0"
 serde_json = "1.0"
@@ -28,3 +27,7 @@ hbb_common = { path = "libs/hbb_common" }
 [workspace]
 members = ["libs/hbb_common"]
 
+[dependencies.rocksdb]
+default-features = false
+features = ["lz4"]
+version = "0.15"
