--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,9 @@ serde_json = "1.0"
 lazy_static = "1.4"
 clap = "2.33"
 rust-ini = "0.16"
+reqwest = "0.10"
 
 [build-dependencies]
-cc = "1.0"
 hbb_common = { path = "libs/hbb_common" }
 
 [workspace]
