--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ serde_json = "1.0"
 lazy_static = "1.4"
 clap = "2.33"
 rust-ini = "0.16"
-reqwest = { version = "0.10", features = ["json", "blocking"] }
+minreq = { version = "2.3.1", features = ["punycode"] }
 machine-uid = "0.2"
 mac_address = "1.1"
 whoami = "0.9"
