apply correct s6 overlay

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,13 +1,14 @@
 FROM busybox:stable
 
 ARG S6_OVERLAY_VERSION=3.1.0.1
+ARG S6_ARCH=x86_64
 ADD https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-noarch.tar.xz /tmp
-ADD https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-x86_64.tar.xz /tmp
+ADD https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-${S6_ARCH}.tar.xz /tmp
 RUN \
   tar -C / -Jxpf /tmp/s6-overlay-noarch.tar.xz && \
-  tar -C / -Jxpf /tmp/s6-overlay-x86_64.tar.xz && \
+  tar -C / -Jxpf /tmp/s6-overlay-${S6_ARCH}.tar.xz && \
   rm /tmp/s6-overlay*.tar.xz
-  
+
 COPY rootfs /
 
 ENV RELAY relay.example.com
