--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -207,7 +207,7 @@ jobs:
           echo "MAJOR_TAG=$M" >> $GITHUB_ENV
 
       # manifest for :1.2.3 tag
-      - name: Create and push manifest
+      - name: Create and push manifest (:ve.rs.ion)
         uses: Noelware/docker-manifest-action@master
         with:
           base-image: ${{ secrets.DOCKER_IMAGE }}:${{ env.GIT_TAG }}
@@ -215,7 +215,7 @@ jobs:
           push: true
 
       # manifest for :1 tag (major release)
-      - name: Create and push manifest
+      - name: Create and push manifest (:major)
         uses: Noelware/docker-manifest-action@master
         with:
           base-image: ${{ secrets.DOCKER_IMAGE }}:${{ env.MAJOR_TAG }}
@@ -223,14 +223,7 @@ jobs:
           push: true
 
       # manifest for :latest tag
-      - name: Create and push manifest
-        uses: Noelware/docker-manifest-action@master
-        with:
-          base-image: ${{ secrets.DOCKER_IMAGE }}:${{ github.ref_name }}
-          extra-images: ${{ secrets.DOCKER_IMAGE }}:${{ github.ref_name }}-amd64,${{ secrets.DOCKER_IMAGE }}:${{ github.ref_name }}-arm64v8,${{ secrets.DOCKER_IMAGE }}:${{ github.ref_name }}-armv7,${{ secrets.DOCKER_IMAGE }}:${{ github.ref_name }}-i386
-          push: true
-
-      - name: Create and push manifest
+      - name: Create and push manifest (:latest)
         uses: Noelware/docker-manifest-action@master
         with:
           base-image: ${{ secrets.DOCKER_IMAGE }}:${{ env.LATEST_TAG }}
