--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ default-run = "hbbs"
 name = "hbbr"
 path = "src/hbbr.rs"
 
+[[bin]]
+name = "rustdesk-utils"
+path = "src/utils.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
