deb package build for rustdesk-utils

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -341,4 +341,4 @@ jobs:
           files: |
             debian-build/rustdesk-server-hbbr_*_${{ matrix.job.debian_platform }}.deb
             debian-build/rustdesk-server-hbbs_*_${{ matrix.job.debian_platform }}.deb
-#            debian-build/rustdesk-server-utils_*_${{ matrix.job.debian_platform }}.deb
+            debian-build/rustdesk-server-utils_*_${{ matrix.job.debian_platform }}.deb
