--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,6 +49,9 @@ jobs:
       - uses: Swatinem/rust-cache@v2
       - uses: actions-rs/cargo@v1
         with:
+          command: build
+      - uses: actions-rs/cargo@v1
+        with:
           command: fmt
           args: --all -- --check
 
