--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -105,6 +105,15 @@ jobs:
           scoop bucket add extras
           scoop install nsis
 
+      - name: Sign exe files
+        uses: GermanBluefox/code-sign-action@v7
+        with:
+          certificate: '${{ secrets.WINDOWS_PFX_BASE64 }}'
+          password: '${{ secrets.WINDOWS_PFX_PASSWORD }}'
+          certificatesha1: '${{ secrets.WINDOWS_PFX_SHA1_THUMBPRINT }}'
+          folder: 'target\x86_64-pc-windows-msvc\release'
+          recursive: false
+
       - name: Build UI setup file
         run: |
           rustup default nightly
@@ -115,6 +124,7 @@ jobs:
           makensis /V1 setup.nsi
           mkdir SignOutput
           mv RustDeskServer.Setup.exe SignOutput\
+          mv ..\target\x86_64-pc-windows-msvc\release\*.exe SignOutput\
         working-directory: ./ui
 
       - name: Sign UI setup file 
@@ -131,9 +141,9 @@ jobs:
         with:
           name: binaries-windows-x86_64
           path: |
-            target\x86_64-pc-windows-msvc\release\hbbr.exe
-            target\x86_64-pc-windows-msvc\release\hbbs.exe
-            target\x86_64-pc-windows-msvc\release\rustdesk-utils.exe
+            ui\SignOutput\hbbr.exe
+            ui\SignOutput\hbbs.exe
+            ui\SignOutput\rustdesk-utils.exe
             ui\SignOutput\RustDeskServer.Setup.exe
           if-no-files-found: error
 
