--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "hbbs"
-version = "1.1.7"
-authors = ["open-trade <info@rustdesk.com>"]
+version = "1.1.7-1"
+authors = ["rustdesk <info@rustdesk.com>"]
 edition = "2021"
 build = "build.rs"
 default-run = "hbbs"
