--- a/.github/workflows/test-selfhosted.yaml
+++ b/.github/workflows/test-selfhosted.yaml
@@ -11,9 +11,9 @@ jobs:
     name: Build 
     #runs-on: ubuntu-22.04
     runs-on: self-hosted
-    container:
-      # Runner docker image
-      image: ubuntu:22.04
+    # Runner docker image
+    #container:
+      #image: ubuntu:22.04
     strategy:
       fail-fast: false
       matrix:
