--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,7 +35,7 @@ jobs:
           - { name: "arm64v8", target: "aarch64-unknown-linux-musl" }
           - { name: "armv7",   target: "armv7-unknown-linux-musleabihf" }
           - { name: "i386",    target: "i686-unknown-linux-musl" }
-          #- { name: "amd64fb",    target: "x86_64-unknown-freebsd" }
+          - { name: "amd64fb",    target: "x86_64-unknown-freebsd" }
 
     steps:
       
